force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <displayFormat>APPL-{000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>