force-app/main/default/objects/Application__c/fields/ActualCancelDate__c.field-meta.xml
<CustomField>
    <fullName>ActualCancelDate__c</fullName>
    <label>Actual Cancel Date</label>
    <type>Date</type>
</CustomField>