force-app/main/default/objects/Application__c/fields/ActualChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ActualChangeDate__c</fullName>
    <label>Actual Change Date</label>
    <type>Date</type>
</CustomField>