force-app/main/default/objects/Application__c/fields/ActualWorkDateDeployUnDeploy__c.field-meta.xml
<CustomField>
    <fullName>ActualWorkDateDeployUnDeploy__c</fullName>
    <label>Actual Work Date(Deploy &amp; UnDeploy)</label>
    <type>Date</type>
</CustomField>