force-app/main/default/objects/Application__c/fields/ApplicationReceiptDatefromCustomer__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceiptDatefromCustomer__c</fullName>
    <label>Application Receipt Date from Customer</label>
    <type>Date</type>
</CustomField>