force-app/main/default/objects/Application__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>