force-app/main/default/objects/Application__c/fields/CancelFlag__c.field-meta.xml
<CustomField>
    <fullName>CancelFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Flag</label>
    <type>Checkbox</type>
</CustomField>