force-app/main/default/objects/Application__c/fields/ConfirmedDispatchRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedDispatchRequestDate__c</fullName>
    <label>Confirmed Dispatch Request Date</label>
    <type>Date</type>
</CustomField>