force-app/main/default/objects/Application__c/fields/ContactDetailDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactDetailDeliveryAddress__c</fullName>
    <label>Contact Detail of Delivery Address</label>
    <type>TextArea</type>
</CustomField>