force-app/main/default/objects/Application__c/fields/CorporateMyNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporateMyNumber__c</fullName>
    <label>Corporate My Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>