force-app/main/default/objects/Application__c/fields/CrossFunctionStatus__c.field-meta.xml
<CustomField>
    <fullName>CrossFunctionStatus__c</fullName>
    <label>Cross-Function Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CrossFunctionStatus</valueSetName>
    </valueSet>
</CustomField>