force-app/main/default/objects/Application__c/fields/DeliveryAddressDetail__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressDetail__c</fullName>
    <label>Delivery Address Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>