force-app/main/default/objects/Application__c/fields/DispatchCompletionNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>DispatchCompletionNoticeDate__c</fullName>
    <label>Dispatch Completion Notice Date</label>
    <type>Date</type>
</CustomField>