force-app/main/default/objects/Application__c/fields/DispatchRequestDateToSupplier__c.field-meta.xml
<CustomField>
    <fullName>DispatchRequestDateToSupplier__c</fullName>
    <label>Dispatch Request Date To Supplier</label>
    <type>Date</type>
</CustomField>