force-app/main/default/objects/Application__c/fields/ExpectedNewRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNewRegistrationDate__c</fullName>
    <label>Expected New Registration Date</label>
    <type>Date</type>
</CustomField>