force-app/main/default/objects/Application__c/fields/InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPLICATION (INVOICE TO)</relationshipLabel>
    <relationshipName>ApplicationInvoiceTo</relationshipName>
    <type>Lookup</type>
</CustomField>