force-app/main/default/objects/Application__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPLICATION (PAYMENT TO)</relationshipLabel>
    <relationshipName>ApplicationPaymentTo</relationshipName>
    <type>Lookup</type>
</CustomField>