force-app/main/default/objects/Application__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PIC</relationshipName>
    <type>Lookup</type>
</CustomField>