force-app/main/default/objects/Application__c/fields/PICVendor__c.field-meta.xml
<CustomField>
    <fullName>PICVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Vendor__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>APPLICATION (P.I.C OF VENDOR)</relationshipLabel>
    <relationshipName>ApplicationPICVendor</relationshipName>
    <type>Lookup</type>
</CustomField>