force-app/main/default/objects/Application__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>