force-app/main/default/objects/Application__c/fields/RequestContactFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>RequestContactFromCustomer__c</fullName>
    <label>Request Contact from Customer</label>
    <type>Date</type>
</CustomField>