force-app/main/default/objects/Application__c/fields/RequestedShippingDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedShippingDate__c</fullName>
    <label>Requested Shipping Date</label>
    <type>Date</type>
</CustomField>