force-app/main/default/objects/Application__c/fields/ReturnRequestDateToEndUser__c.field-meta.xml
<CustomField>
    <fullName>ReturnRequestDateToEndUser__c</fullName>
    <label>Return Request Date to End User</label>
    <type>Date</type>
</CustomField>