force-app/main/default/objects/Application__c/fields/ServiceEndNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndNoticeDate__c</fullName>
    <label>Service End Notice Date</label>
    <type>Date</type>
</CustomField>