force-app/main/default/objects/Application__c/fields/ShippingDestinationCompany__c.field-meta.xml
<CustomField>
    <fullName>ShippingDestinationCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Destination Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPLICATION (Shipping Destination Company)</relationshipLabel>
    <relationshipName>ApplicationShippingDestination</relationshipName>
    <type>Lookup</type>
</CustomField>