force-app/main/default/objects/Application__c/fields/ShippingTo__c.field-meta.xml
<CustomField>
    <fullName>ShippingTo__c</fullName>
    <label>Shipping To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>