force-app/main/default/objects/Application__c/fields/SlipNumber__c.field-meta.xml
<CustomField>
    <fullName>SlipNumber__c</fullName>
    <label>Slip Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>