force-app/main/default/objects/Application__c/fields/SupportDate__c.field-meta.xml
<CustomField>
    <fullName>SupportDate__c</fullName>
    <label>Support Date</label>
    <type>DateTime</type>
</CustomField>