force-app/main/default/objects/Application__c/fields/TerminationFlag__c.field-meta.xml
<CustomField>
    <fullName>TerminationFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination Flag</label>
    <type>Checkbox</type>
</CustomField>