force-app/main/default/objects/Application__c/fields/UnreturnedFlag__c.field-meta.xml
<CustomField>
    <fullName>UnreturnedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unreturned Flag</label>
    <type>Checkbox</type>
</CustomField>