force-app/main/default/objects/Application__c/recordTypes/CancelFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>CancelFromCustomer</fullName>
    <active>true</active>
    <label>Cancel from Customer</label>
</RecordType>