force-app/main/default/objects/Application__c/recordTypes/CancelToVendor.recordType-meta.xml
<RecordType>
    <fullName>CancelToVendor</fullName>
    <active>false</active>
    <label>Cancel to Vendor</label>
</RecordType>