force-app/main/default/objects/Application__c/recordTypes/ChangeFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>ChangeFromCustomer</fullName>
    <active>true</active>
    <label>Change from Customer</label>
</RecordType>