force-app/main/default/objects/Application__c/recordTypes/ChangeToVendor.recordType-meta.xml
<RecordType>
    <fullName>ChangeToVendor</fullName>
    <active>false</active>
    <label>Change to Vendor</label>
</RecordType>