force-app/main/default/objects/Application__c/recordTypes/Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Inquiry</fullName>
    <active>true</active>
    <label>Inquiry</label>
</RecordType>