force-app/main/default/objects/Application__c/recordTypes/NewRegistrationfromCustomer.recordType-meta.xml
<RecordType>
    <fullName>NewRegistrationfromCustomer</fullName>
    <active>true</active>
    <label>New Registration from Customer</label>
</RecordType>