force-app/main/default/objects/Application__c/recordTypes/NewRegistrationToVendor.recordType-meta.xml
<RecordType>
    <fullName>NewRegistrationToVendor</fullName>
    <active>false</active>
    <label>New Registration to Vendor</label>
</RecordType>