force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ApplicationType__c</columns>
    <columns>ApplicationStatus__c</columns>
    <columns>ExpectedNewRegistrationDate__c</columns>
    <columns>ActualNewRegistrationDate__c</columns>
    <columns>ExpectedCancelDate__c</columns>
    <columns>ActualCancelDate__c</columns>
    <columns>ExpectedChangeDate__c</columns>
    <columns>ActualChangeDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>